--- a/src/entrypoints/newtab/NewTab.module.css
+++ b/src/entrypoints/newtab/NewTab.module.css
@@ -11,11 +11,11 @@
 	@media (max-width: $mantine-breakpoint-xl) {
 		padding: 32px 64px;
 	}
-	
+
 	@media (max-width: $mantine-breakpoint-md) {
 		padding: 32px 48px;
 	}
-	
+
 	@media (max-width: $mantine-breakpoint-sm) {
 		padding: 32px 24px;
 	}
@@ -50,7 +50,8 @@
 }
 
 .selectItem {
-	&:hover, &:focus {
+	&:hover,
+	&:focus {
 		background-color: var(--mantine-color-background-2);
 	}
 }
@@ -77,4 +78,3 @@
 	text-overflow: ellipsis;
 	max-width: 400px;
 }
-
